Added h2 tag in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello dude</h1>
+    <h2>This is an uodate from the local repository to the main repository</h2>
 </body>
 </html>
